Mission 관련 controller 수정